fix: footer gap

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -36,7 +36,7 @@
 
 .footer__nav {
   display: flex;
-  gap: 32px;
+  gap: 25px;
 
   @media screen and (max-width: $screen-laptop-max) {
     margin-top: 40px;
